# proto-ai-tool

./: AGENTS.md  README.md  pyproject.toml
prompts/default/chat/: system.j2  user.j2
prompts/default/explain_cpp/: system.prepend.j2  user.j2
src/proto_codegen/: __init__.py  chat.py  cli.py  config.py  model_discovery.py  openai_client.py  render.py
src/saga_code/: __init__.py  chat.py  cli.py  config.py  explain_cpp.py  model_discovery.py  openai_client.py  prompting.py  render.py
tests/: test_chat.py  test_explain_cpp.py  test_models.py  test_prompting.py
